# comsense-circuits

./: .gitignore  CLAUDE.md  PR_MESSAGE.md  README.md  activation_patching.py  blog_week7.tex  comsense_circuits_report.aux  comsense_circuits_report.out  comsense_circuits_report.tex  config.py  data_utils.py  evaluate.py  extract_activations.py  extract_head_activations.py  head_patching.py  logit_lens.py  mean_ablation.py  mlp_attn_patching.py  modal_app.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  pyproject.toml
activations_dir/activations/: data.pkl
activations_dir/activations/.data/: serialization_id
activations_dir/activations/data/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  (+369 more)
analysis/: failure_direction_summary.md  pair_analysis.py  plot_logit_lens.py  probe.py  probe_heads.py  probe_l2_sweep.py  probing_findings.md  summary.md
artifacts/analysis/: ablation_results.json  failure_direction_by_domain.json  head_patching_results.json  head_probe_results.json  l2_sweep_results.json  patching_results.json  probe_results.json
eval/: accuracy_table.json  asymmetric_pairs.json  pair_summary.json  predictions.jsonl  selected_pairs_for_patching.json  summary.txt
final_report/: paper.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
reports/: logit_lens_findings.md  mlp_attn_patching_findings.md  summary.md  week9_findings.md
results_download/logit_lens/: logit_lens_results.json  logit_lens_summary.json
